fix: grid instead flex with gaps for ios com-ty, html validation

--- a/shelter/pages/pets/pets.concat.css
+++ b/shelter/pages/pets/pets.concat.css
@@ -423,18 +423,23 @@ body {
   display: flex; }
 
 .page {
-  display: flex;
+  display: grid;
   width: 120rem;
   height: 93rem;
   column-gap: 4rem;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  grid-template-columns: repeat(4, 27rem); }
+  @media only screen and (max-width: 79.9375em) {
+    .page {
+      column-gap: 4rem;
+      row-gap: 3rem;
+      grid-template-columns: repeat(2, 27rem); } }
   @media only screen and (max-width: 47.9375em) {
     .page {
       width: 27rem;
       height: auto;
-      flex-direction: column;
-      flex-wrap: nowrap;
-      gap: 3rem; } }
+      column-gap: 3rem;
+      grid-template-columns: 27rem; } }
 
 .card {
   display: flex;
@@ -447,15 +452,6 @@ body {
   background-color: #fafafa;
   transition: all .3s;
   cursor: pointer; }
-  .card:not(:last-child) {
-    margin-right: 0;
-    -apple-margin-right: 4rem; }
-    @media only screen and (max-width: 47.9375em) {
-      .card:not(:last-child) {
-        margin-right: 0;
-        -apple-margin-right: 0;
-        -apple-margin-bottom: 3rem;
-        margin-bottom: 0; } }
   .card__img {
     display: block;
     height: 27rem;
